Fix the placeholder color in dark mode

--- a/sass/mystyles.scss
+++ b/sass/mystyles.scss
@@ -110,6 +110,10 @@ body.dark .input, .textarea, .select select {
     color: white;
 }
 
+body.dark input.input::placeholder {
+  color: #565656;
+}
+
 body.dark code {
   background: #2A2A2A;
   color: #569cd6;
